fixed particle list on mobile

--- a/src/components/HomePage/ParticlesList/particlesList.scss
+++ b/src/components/HomePage/ParticlesList/particlesList.scss
@@ -1,16 +1,3 @@
-.particlesList {
-    position: absolute;
-    z-index: 10;
-    top: 30%;
-    max-height: 50%;
-    width: 300px;
-    display: flex;
-    overflow-y: hidden;
-    transition: left 0.5s;
-    border: #111 1px solid;
-    border-left: none;
-    border-radius: 0 10px 10px 0;
-}
 .list {
     padding-right: 20px;
     width: 300px;
@@ -22,16 +9,27 @@
         font-size: 1.3em;
     }
 }
-.isMobile {
-    .particlesList {
-        left: -100%;
+.particlesList {
+    position: absolute;
+    z-index: 10;
+    top: 30%;
+    max-height: 50%;
+    left: -300px;
+    &.isMobile {
+        left: -90vw;
+        .list {
+            width: 90vw;
+        }
     }
-    .list {
-        width: 100%;
-    }
+    display: flex;
+    overflow-y: hidden;
+    transition: left 0.5s;
+    border: #111 1px solid;
+    border-left: none;
+    border-radius: 0 10px 10px 0;
 }
-.isVisible {
-    left: 0;
+.isVisible.isVisible {
+    left: 0 !important;
     overflow-y: auto;
 }
 .listToggle {
